# napi_screenshot

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  example.mjs  index.d.ts  index.js  package-lock.json  package.json  test.mjs
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: ffi.rs  lib.rs  napi.rs
src/core/: darwin.rs  image.rs  linux.rs  mod.rs  win32.rs
